--- a/.github/workflows/google-cloud.yml
+++ b/.github/workflows/google-cloud.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Build
         run: gcloud builds submit \
             --quiet \
-            --tag "gcr.io/${{ secrets.GCLOUD_PROJECT }}/${{ secrets.GCLOUD_APP_NAME }}"
+            -t "gcr.io/${{ secrets.GCLOUD_PROJECT }}/${{ secrets.GCLOUD_APP_NAME }}"
